--- a/webproject/templates/post/post_detail.html
+++ b/webproject/templates/post/post_detail.html
@@ -7,9 +7,11 @@
 </div>
 <div>
     <ul>
-        <li>{{book.name}}</li>
-        <li>{{book.author}}</li>
-        <li>{{book.department}}</li>
+        <li>책이름 : &nbsp {{book.name}}</li>
+        <li>저자 : &nbsp {{book.author}}</li>
+        <li>전공 : &nbsp {{book.department}}</li>
+        <li>가격 : &nbsp {{book.price}}</li>
+        <li>택배여부 : &nbsp{{post.isparcel}}</li>
     </ul>
 </div>
 
