--- a/webproject/templates/base.html
+++ b/webproject/templates/base.html
@@ -14,17 +14,33 @@
 <body>
 <!--내비게이션바-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-    <a class="navbar-brand" href="{{url_for('main.index')}}">main</a>
+    <a class="navbar-brand" href="{{url_for('main.index')}}"><img src="{{url_for('static',filename='logo.jpg')}}" alt="re 북" width="100px"></a>
     <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+        {% if g.user %}
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">계정생성</a>
+                <a class="nav-link" href="{{ url_for('auth.logout') }}">{{ g.user.username }} (로그아웃)</a>
+            </li>
+        </ul>
+        {% else %}
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('auth.signup')}}">계정생성</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">로그인</a>
+                <a class="nav-link" href="{{url_for('auth.login')}}">로그인</a>
+            </li>
+        </ul>
+        {% endif %}
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/post">글목록</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">마이페이지</a>
             </li>
         </ul>
     </div>
