--- a/webproject/templates/index/index.html
+++ b/webproject/templates/index/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content%}
     <h1>인덱스페이지</h1>
     <a href ='/post'>post로 가기</a>
-</body>
-</html>
+{% endblock %}
