--- a/webproject/templates/post/post_detail.html
+++ b/webproject/templates/post/post_detail.html
@@ -2,6 +2,7 @@
 {% block content%}
 
 <h1>{{ post.subject }}</h1>
+<img src="{{post.img_path}}">
 <div>
     {{post.content}}
 </div>
@@ -19,7 +20,9 @@
 <div>
     <ul>
         {% for reply in post.reply_set %}
-        <li>{{reply.content}}</li>
+        <li>{{reply.content}}
+            <span>작성자 : &nbsp {{reply.user.username}}</span>
+        </li>
         {%endfor%}
     </ul>
 </div>
