--- a/webproject/templates/auth/signup.html
+++ b/webproject/templates/auth/signup.html
@@ -1,23 +1,31 @@
-<div>
+{% extends 'base.html' %}
+{% block content%}
+<div class="card" style="width: 30rem; margin: auto; top: 100px; bottom: auto;">
+    <div class="card-body" >
     <form method="post" >
         {{ form.csrf_token }}
         {% include "form_errors.html" %}
-        <div>
+        <div class="mb-3 ">
+            <h2 class="mb-4">회원가입</h2>
             <label for="username">사용자이름</label>
-            <input type="text"  name="username" id="username" vlaue="{{ form.username.data or ''}}">
+            <input type="text" class="form-control"  name="username" id="username" vlaue="{{ form.username.data or ''}}">
         </div>
-        <div >
+        <div class="mb-3">
             <label for="password1">비밀번호</label>
-            <input type="password" name="password1" id="password1" value="{{ form.password1.data or '' }}">
+            <input type="password" class="form-control" name="password1" id="password1" value="{{ form.password1.data or '' }}">
         </div>
-        <div>
+        <div class="mb-3">
             <label for="password2">비밀번호확인</label>
-            <input type="password" name="password2" id="password2" value="{{ form.password2.data or ''}}">
+            <input type="password" class="form-control" name="password2" id="password2" value="{{ form.password2.data or ''}}">
         </div>
-        <div >
+        <div class="mb-3">
             <label for="email">이메일</label>
             <input type="text" class="form-control" name="email" id="email" value="{{ form.email.data or ''}}">
         </div>
-        <button type="submit" >생성하기</button>
+        <div class="d-grid gap-2 mt-5">
+        <button type="submit" class="btn btn-primary" >계정 생성하기</button>
+        </div>
     </form>
+    </div>
 </div>
+{% endblock %}
