--- a/webproject/templates/mypage/mypage_reply.html
+++ b/webproject/templates/mypage/mypage_reply.html
@@ -11,7 +11,7 @@
             </div>
             {% else %}
             <div class="card bg-info" style="--bs-bg-opacity: .1">
-            <p>판매자:{{re_reply.user.username}}{{re_reply.content}}</p>
+            <p>구매자:{{re_reply.user.username}}{{re_reply.content}}</p>
             </div>
             {%endif%}
         </div>
