--- a/webproject/templates/auth/login.html
+++ b/webproject/templates/auth/login.html
@@ -1,31 +1,25 @@
 {% extends 'base.html' %}
 {% block content%}
-
-<head>
-    <link href="{{ url_for('static',filename='login.css') }}" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-    <style>
-        .v15_155 span {color : white; text-align: center; }
-        .v15_155:hover {color : grey;}
-    </style>
-</head>
-<body>
-    <div>
+<div class="d-flex justify-content-center">
+    <div class="card" style="width:30em; height:20em; top:100px;">
+        <div class="card-body">
         <form method="post" >
             {{ form.csrf_token }}
             {% include "form_errors.html" %}
-            <div class="v15_148">
+            <div class="mb-3">
+                <h2 class="mb-4">로그인</h2>
                 <label for="username">사용자이름</label>
-                <input class='v15_149' type="text" name="username" id="username" value="{{ form.username.data or ''}}">
+                <input class='form-control' type="text" name="username" id="username" value="{{ form.username.data or ''}}" required>
             </div>
-            <div class="v15_151">
+            <div class="mb-3">
                 <label for="password">비밀번호</label>
-                <input class='v15_152' type="password" name="password" id="password" value="{{ form.password.data or ''}}">
+                <input class='form-control' type="password" name="password" id="password" value="{{ form.password.data or ''}}" required>
             </div>
-            <div class="v15_154">
-                <button class='v15_155'type="submit"><span>로그인</span></button>
+            <div class="d-grid gap-2 mt-5">
+                <button class='btn btn-primary'type="submit"><span>로그인</span></button>
             </div>
         </form>
+        </div>
     </div>
-</body>
+</div>
 {%endblock%}
