--- a/webproject/templates/auth/signup.html
+++ b/webproject/templates/auth/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content%}
-<div class="card" style="width: 30rem; margin: auto; top: 100px; bottom: auto;">
+<div class="card" style="width: 30em; margin: auto; top: 100px; bottom: auto;">
     <div class="card-body" >
     <form method="post" >
         {{ form.csrf_token }}
