--- a/webproject/templates/index/index.html
+++ b/webproject/templates/index/index.html
@@ -36,7 +36,7 @@
       </button>
     </h2>
     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+      <div class="accordion-body">Re북은 전공 서적 중고 판매 사이트 입니다. 사용자 간의 거래를 기본으로 합니다.</div>
     </div>
   </div>
   <div class="accordion-item">
@@ -46,7 +46,7 @@
       </button>
     </h2>
     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+      <div class="accordion-body">게시글 검색을 통해 원하는 책을 검색 할 수 있습니다. 게시글을 통해 판매자에게 직접 연락할 수 있습니다. 마이페이지->Profile->책 등록하기 를 통해 책을 등록 할 수 있습니다</div>
     </div>
   </div>
   <div class="accordion-item">
@@ -56,7 +56,7 @@
       </button>
     </h2>
     <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+      <div class="accordion-body">주의해주세요</div>
     </div>
   </div>
 </div>
