--- a/webproject/templates/mypage/mypage_list.html
+++ b/webproject/templates/mypage/mypage_list.html
@@ -14,37 +14,43 @@
   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0" style="overflow-y:scroll;">
     <div class="card-body" style="width:50em; height:30em;" >
         <h3 class="mt-3 ms-3"><b>작성글목록</b></h3>
+
+
+
+
+
+
+
     {%if post_list[0]%}
     {%for i in range(5)%}
     {%if post_list[i]%}
-        <div class="card-body">
-            <a href="{{ url_for('post.detail', post_id=post_list[i].id)}}" class="text-decoration-none text-black">
-                <div class="card" style="height:45px;">
-                <div class="row-g-0">
+
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{i}}" aria-expanded="false" aria-controls="flush-collapseOne">
                 <div class="ms-3 col-md-3 mt-2" style="float:left;">{{post_list[i].book.name}}</div>
-                <div class="ms-3 mt-2" style="float:left;">{{post_list[i].subject}}</div>
-                <div class="col-md-2 mt-2 " style="float:right;"><small class="text-muted">{{post_list[i].create_date.year}}/{{post_list[i].create_date.month}}/{{post_list[i].create_date.day}}</small></div>
+                <div class="ms-3 col-md-3 mt-2" style="float:left;">{{post_list[i].subject}}</div>
 
-                </div>
-                </div>
-            </a>
-            <div class="card">
+                <div class="col-md-2 mt-2 col-md-3 " style="float:right;"><small class="text-muted">{{post_list[i].create_date.year}}/{{post_list[i].create_date.month}}/{{post_list[i].create_date.day}}</small></div>
+              <span class="badge bg-primary rounded-pill ">{{post_list[i].reply_set|length}}</span>
+              <span>의 bid</span>
+          </button>
+        <div id="flush-collapse{{i}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
             {%for reply in post_list[i].reply_set%}
-            <div class="card-body bg-secondary" style="--bs-bg-opacity: .2">
-                <a href="{{url_for('mypage.reply', reply_id=reply.id)}}" class="text-decoration-none">
-                    <div class="text-black ">{{reply.user.username}}의 관심</div>
-                </a>
-            </div>
-            {%endfor%}
-            </div>
-            <div class="card">
-                <div class="card-body">
-                <button class="btn bg-danger text-light" style="--bs-bg-opacity: .9; float:right;"><b>삭제</b></button>
-                <button class="btn bg-warning text-light" style="--bs-bg-opacity: .9;"><b>수정</b></button>
+                <div class="card-body bg-secondary" style="--bs-bg-opacity: .2">
+                    <a href="{{url_for('mypage.reply', reply_id=reply.id)}}" class="text-decoration-none">
+                        <div class="text-black ">{{reply.user.username}}의 관심</div>
+                    </a>
                 </div>
-            </div>
-
+            {%endfor%}
+             <a href="#" class="delete btn btn-sm btn-outline-secondary" data-uri="{{url_for('post.delete', post_id=post_list[i].id)}}">삭제</a>
+          </div>
         </div>
+      </div>
+    </div>
+
+
     {%endif%}
     {%endfor%}
                 <a href="{{url_for('mypage.post_all')}}">
@@ -111,4 +117,18 @@
 </div>
 </div>
 </div>
+</div>
+</div>
+{% block script %}
+<script type='text/javascript'>
+const delete_elements = document.getElementsByClassName("delete");
+Array.from(delete_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        if(confirm("정말로 삭제하시겠습니까?")) {
+            location.href = this.dataset.uri;
+        };
+    });
+});
+</script>
+{% endblock %}
 {% endblock %}
