--- a/webproject/templates/post/post_list.html
+++ b/webproject/templates/post/post_list.html
@@ -2,6 +2,17 @@
 {% block content%}
 {% if post_list %}
 <div class="mt-3" style="text-decoration:none;">
+    <div class="d-flex justify-content-center">
+        <div class="card" style="width:50em">
+         <div class="input-group">
+                    <input type="text" id="search_kw" class="form-control" value="{{ kw or '' }}"
+                           placeholder="책이름, 저자, 학과, 학교 명으로 검색하세요">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+                    </div>
+                </div>
+        </div>
+    </div>
     {% for post in post_list.items %}
     <div class="d-flex justify-content-center">
         <div class="card mb-3 mt-3" style="width: 800px;">
@@ -59,14 +70,14 @@
         </li>
         {% else %}
         <li class="page-item disabled">
-            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+            <a class="page-link" data-page="{{ post_list.prev_num }}" href="javascript:void(0)">이전</a>
         </li>
         {% endif %}
         {% for page_num in post_list.iter_pages() %}
             {% if page_num %}
                 {% if page_num != post_list.page %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                    <a class="page-link" data-page="{{ page_num }}" href="javascript:void(0)">{{ page_num }}</a>
                 </li>
                 {% else %}
                 <li class="page-item active" aria-current="page">
@@ -86,7 +97,7 @@
         </li>
         {% else %}
         <li class="page-item disabled">
-            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+            <a class="page-link" data-page="{{ post_list.next_num }}" href="javascript:void(0)">다음</a>
         </li>
         {% endif %}
     </ul>
@@ -94,4 +105,29 @@
 {% else %}
 <p>no content</p>
 {% endif %}
+<form id="searchForm" method="get" action="{{ url_for('post._list') }}">
+    <input type="hidden" id="kw" name="kw" value="{{ kw or '' }}">
+    <input type="hidden" id="page" name="page" value="{{ page }}">
+</form>
+
+
+{% block script %}
+<script type='text/javascript'>
+const page_elements = document.getElementsByClassName("page-link");
+Array.from(page_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        document.getElementById('page').value = this.dataset.page;
+        document.getElementById('searchForm').submit();
+    });
+});
+const btn_search = document.getElementById("btn_search");
+btn_search.addEventListener('click', function() {
+    document.getElementById('kw').value = document.getElementById('search_kw').value;
+    document.getElementById('page').value = 1;
+    document.getElementById('searchForm').submit();
+});
+</script>
+{% endblock %}
+
+
 {% endblock %}
