--- a/webproject/templates/index/index.html
+++ b/webproject/templates/index/index.html
@@ -9,13 +9,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="{{url_for('static',filename='img/signup.png')}}" class="d-block w-100" alt="signup" >
+      <img src="{{url_for('static',filename='main1.png')}}" class="d-block w-100" alt="signup" >
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="{{url_for('static',filename='img/logo2.png')}}" class="d-block w-100" alt="logo">
+      <img src="{{url_for('static',filename='main2.png')}}" class="d-block w-100" alt="logo">
     </div>
     <div class="carousel-item">
-      <img src="{{url_for('static',filename='img/1.jpg')}}" class="d-block w-100" alt="1">
+      <img src="{{url_for('static',filename='main3.png')}}" class="d-block w-100" alt="1">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
