--- a/webproject/templates/post/post_form.html
+++ b/webproject/templates/post/post_form.html
@@ -34,7 +34,7 @@
                     {{form.bookname}}
                 </div>
                 <div class="card-body">
-                    <lable for="author">책제목</lable>
+                    <lable for="author">저자</lable>
                     {{form.author}}
                 </div>
                 <div class="card-body">
