--- a/webproject/templates/post/post_list.html
+++ b/webproject/templates/post/post_list.html
@@ -25,12 +25,12 @@
                     </div>
                     <div class="col-md-8  position-relative">
                             <div class="card-body">
-                                <h4  class="card-title fw-bold">책제목: {{post.book.name}}</h4>
+                                <h3  class="card-title fw-bold">{{post.book.name}}</h3>
                                 <div class="row justify-content-start">
                                     <div class="col-6">
                                         <div class="mt-0 mb-3">
-                                            <p class="text-muted mt-0 mb-0">판매글 제목:{{post.subject}}</p>
-                                            <p class="text-muted mt-0 mb-0">저자:{{post.book.author}}</p>
+                                            <h5 class="text-muted mt-0 mb-0">{{post.subject}}</h5>
+                                            <p class="text-muted mt-3 mb-0">저자:{{post.book.author}}</p>
                                             <p class="text-muted mt-0 mb-0">전공:{{post.book.department}}</p>
                                         </div>
                                     </div>
