--- a/webproject/templates/post/post_detail.html
+++ b/webproject/templates/post/post_detail.html
@@ -17,6 +17,7 @@
                     <h1 class="mb-2"><b>{{book.name}}</b></h1>
                     <p class="text-muted mb-0"><b>저자 : {{book.author}}</b></p>
                     <p class="text-muted mb-0"><b>전공 : {{book.department}}</b></p>
+                    <p class="text-muted mb-0"><b>학교 : {{book.school}}</b></p>
                     </div>
                     <span>
                         <h1><b>{{book.price}}원</b></h1>
@@ -34,7 +35,7 @@
 
 <div class="d-flex justify-content-center">
     <div class="card mb-3 mt-3" style="width: 1000px;">
-        <div class="card-body mt-5 ms-5 me-5 mb-5" style="height: 500px;">
+        <div class="card-body mt-5 ms-5 me-5 mb-5" style="height: 500px; overflow-y:scroll;">
             <h5 class="text-muted mb-4" >상세 설명</h5>
             <h3>{{post.content}}</h3>
         </div>
